Fixed header spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -285,8 +285,7 @@ body .cursor__ball circle {
   #hover-title {
     font-family: Redaction;
     font-size: 2.25vw;
-    margin-bottom: 0.25em;
-    margin-top: 0;
+    margin: 0;
     color: white;
   }
 
